--- a/Image-Gallery-App-main/index.html
+++ b/Image-Gallery-App-main/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container" <h1>sky</h1>
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1500485035595-cbe6f645feb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
         </div>
