--- a/Image-Gallery-App-main/index.html
+++ b/Image-Gallery-App-main/index.html
@@ -26,29 +26,29 @@
            </ul> 
         </nav>
     </header>
-
+    </title>JUNGLE
     <div class="container"
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1500485035595-cbe6f645feb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
         </div>
-        </title>JUNGLE
+        </title>FOREST
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1537824598505-99ee03483384?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
         </div>
-        </title>FOREST
+        </title>driving next to a blue lake
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1541410965313-d53b3c16ef17?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
         </div>
-        </title>driving next to a lake
+        </title>MOUNTAINS
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1614586125858-e695dd97d1b6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1203&q=80" alt="">
         </div>
-        </title>MOUNTAINS
+        </title>DEEP FOREST
         <div class="img-container">
             <img src="https://images.unsplash.com/photo-1625472603517-1b0dc72846ab?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
         </div>
 
-        </title>DEEP FOREST
+        </title>COLORED FOREST
         <div class="img-container">
            <img src="https://images.unsplash.com/photo-1619441207978-3d326c46e2c9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" alt="">     
         </div>
