--- a/Image-Gallery-App-main/index.html
+++ b/Image-Gallery-App-main/index.html
@@ -26,9 +26,11 @@
            </ul> 
         </nav>
     </header>
-    </title>JUNGLE
+  
     <div class="container"
         <div class="img-container">
+        </title>JUNGLE
+            <h1>palm trees and trees surrounding a lake in a sunrise</h1>
             <img src="https://images.unsplash.com/photo-1500485035595-cbe6f645feb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
         </div>
         </title>FOREST
